# telegram-rustevalbot

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: check.yml  deploy.yml
ci/: cleanup-target.sh  cleanup_for_cache.sh  coveralls.sh  deploy.sftp  deploy.sh  deploy_rsa.enc  prepare_deploy.sh  server_ssh_key
src/: bot.rs  bot_runner.rs  main.rs  processor.rs  record.rs  shutdown.rs  signal.rs  task_tracker.rs  upgrade.rs  utils.rs
src/command/: about.rs  crate_.rs  doc.rs  eval.rs  eval_template.rs  meta.rs  mod.rs  version.rs
src/cratesio/: mod.rs
src/eval/: execute.rs  mod.rs  parse.rs  prelude.res.rs  processor.rs  record.rs
src/eval/command/: about.rs  crate_.rs  doc.rs  eval.rs  eval_template.rs  mod.rs  version.rs
src/rustdoc/: mod.rs  search.rs  seeker.rs
