[package]
name = "telegram-rustevalbot"
version = "0.4.6"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "MIT"
homepage = "https://github.com/upsuper/telegram-rustevalbot"
edition = "2018"
publish = false

[dependencies]
combine = "3.6.0"
dotenv = "0.14.1"
env_logger = "0.6.0"
derive_more = "0.15.0"
fst = "0.3"
fst-subseq-ascii-caseless = "0.1"
futures = "0.1"
htmlescape = "0.3"
itertools = "0.8.0"
lazy_static = "1.1"
log = "0.4"
matches = "0.1"
notify = "4.0"
parking_lot = "0.9.0"
percent-encoding = "1.0"
regex = "1.0"
rustdoc-seeker = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
telegram_types = "0.5.0"
tokio = "0.1.13"
tokio-timer = "0.2.8"
unicode-width = "0.1"
url = "1.7.1"

[dependencies.reqwest]
version = "0.9.18"
default-features = false
features = ["rustls-tls", "trust-dns"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.1.5"

[dev-dependencies]
string_cache = "0.7"
