[package]
name = "telegram-rustevalbot"
version = "0.4.9"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/upsuper/telegram-rustevalbot"
edition = "2018"
publish = false

[dependencies]
combine = "3.6.0"
dotenv = "0.15.0"
env_logger = "0.7.0"
derive_more = "0.99.2"
fst = "0.3"
fst-subseq-ascii-caseless = "0.1"
futures = "0.3.1"
htmlescape = "0.3"
itertools = "0.8.0"
log = "0.4"
matches = "0.1"
notify = "4.0"
parking_lot = "0.10.0"
once_cell = "1.2.0"
regex = "1.0"
rustdoc-seeker = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
telegram_types = "0.5.0"
unicode-width = "0.1"
url = "2.1.0"

[dependencies.reqwest]
version = "0.10.0"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "0.2.6"
features = ["rt-core", "rt-threaded", "sync"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.1.5"

[dev-dependencies]
string_cache = "0.7"
