[package]
name = "telegram-rustevalbot"
version = "0.4.27"
authors = ["Xidorn Quan <me@upsuper.org>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/upsuper/telegram-rustevalbot"
edition = "2018"
publish = false

[dependencies]
combine = "4.0.1"
dotenv = "0.15.0"
env_logger = "0.9"
derive_more = "0.99.2"
fst = "0.4.0"
fst-subseq-ascii-caseless = "0.1"
futures = "0.3.1"
htmlescape = "0.3"
itertools = "0.10"
log = "0.4"
notify = "5.0"
parking_lot = "0.12"
phf = { version = "0.11.0", features = ["macros"] }
once_cell = "1.2.0"
regex = "1"
rustdoc-seeker = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
telegram_types = "0.6.0"
unicode-width = "0.1"
url = "2.1.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "sync", "time"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.7"

[dev-dependencies]
string_cache = "0.8.0"
